// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectGeographicType Container renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectGeographicType
    handleSelect={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="label"
>
          Geographic type
</label>,
        <div
          className="control"
>
          <div
                    className="select"
          >
                    <select
                              disabled={false}
                              onChange={[Function]}
                              value=""
                    >
                              <option
                                        disabled={true}
                                        value=""
                              >
                                        Select geographic type
                              </option>
                    </select>
          </div>
</div>,
      ],
      "className": "field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Geographic type",
          "className": "label",
        },
        "ref": null,
        "rendered": "Geographic type",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="select"
>
            <select
                        disabled={false}
                        onChange={[Function]}
                        value=""
            >
                        <option
                                    disabled={true}
                                    value=""
                        >
                                    Select geographic type
                        </option>
            </select>
</div>,
          "className": "control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <select
              disabled={false}
              onChange={[Function]}
              value=""
>
              <option
                            disabled={true}
                            value=""
              >
                            Select geographic type
              </option>
</select>,
            "className": "select",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                Array [
                  <option
                    disabled={true}
                    value=""
>
                    Select geographic type
</option>,
                ],
              ],
              "disabled": false,
              "onChange": [Function],
              "value": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "-1",
                "nodeType": "host",
                "props": Object {
                  "children": "Select geographic type",
                  "disabled": true,
                  "value": "",
                },
                "ref": null,
                "rendered": "Select geographic type",
                "type": "option",
              },
            ],
            "type": "select",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            Geographic type
</label>,
          <div
            className="control"
>
            <div
                        className="select"
            >
                        <select
                                    disabled={false}
                                    onChange={[Function]}
                                    value=""
                        >
                                    <option
                                                disabled={true}
                                                value=""
                                    >
                                                Select geographic type
                                    </option>
                        </select>
            </div>
</div>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Geographic type",
            "className": "label",
          },
          "ref": null,
          "rendered": "Geographic type",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="select"
>
              <select
                            disabled={false}
                            onChange={[Function]}
                            value=""
              >
                            <option
                                          disabled={true}
                                          value=""
                            >
                                          Select geographic type
                            </option>
              </select>
</div>,
            "className": "control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <select
                disabled={false}
                onChange={[Function]}
                value=""
>
                <option
                                disabled={true}
                                value=""
                >
                                Select geographic type
                </option>
</select>,
              "className": "select",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  Array [
                    <option
                      disabled={true}
                      value=""
>
                      Select geographic type
</option>,
                  ],
                ],
                "disabled": false,
                "onChange": [Function],
                "value": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "-1",
                  "nodeType": "host",
                  "props": Object {
                    "children": "Select geographic type",
                    "disabled": true,
                    "value": "",
                  },
                  "ref": null,
                  "rendered": "Select geographic type",
                  "type": "option",
                },
              ],
              "type": "select",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SelectGeographicType Container renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectGeographicType
    handleSelect={[Function]}
    measureId="333"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <label
          className="label"
>
          Geographic type
</label>,
        <div
          className="control"
>
          <div
                    className="select"
          >
                    <select
                              disabled={false}
                              onChange={[Function]}
                              value=""
                    >
                              <option
                                        disabled={true}
                                        value=""
                              >
                                        Select geographic type
                              </option>
                    </select>
          </div>
</div>,
      ],
      "className": "field",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Geographic type",
          "className": "label",
        },
        "ref": null,
        "rendered": "Geographic type",
        "type": "label",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="select"
>
            <select
                        disabled={false}
                        onChange={[Function]}
                        value=""
            >
                        <option
                                    disabled={true}
                                    value=""
                        >
                                    Select geographic type
                        </option>
            </select>
</div>,
          "className": "control",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <select
              disabled={false}
              onChange={[Function]}
              value=""
>
              <option
                            disabled={true}
                            value=""
              >
                            Select geographic type
              </option>
</select>,
            "className": "select",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                Array [
                  <option
                    disabled={true}
                    value=""
>
                    Select geographic type
</option>,
                ],
              ],
              "disabled": false,
              "onChange": [Function],
              "value": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "-1",
                "nodeType": "host",
                "props": Object {
                  "children": "Select geographic type",
                  "disabled": true,
                  "value": "",
                },
                "ref": null,
                "rendered": "Select geographic type",
                "type": "option",
              },
            ],
            "type": "select",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            Geographic type
</label>,
          <div
            className="control"
>
            <div
                        className="select"
            >
                        <select
                                    disabled={false}
                                    onChange={[Function]}
                                    value=""
                        >
                                    <option
                                                disabled={true}
                                                value=""
                                    >
                                                Select geographic type
                                    </option>
                        </select>
            </div>
</div>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Geographic type",
            "className": "label",
          },
          "ref": null,
          "rendered": "Geographic type",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="select"
>
              <select
                            disabled={false}
                            onChange={[Function]}
                            value=""
              >
                            <option
                                          disabled={true}
                                          value=""
                            >
                                          Select geographic type
                            </option>
              </select>
</div>,
            "className": "control",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <select
                disabled={false}
                onChange={[Function]}
                value=""
>
                <option
                                disabled={true}
                                value=""
                >
                                Select geographic type
                </option>
</select>,
              "className": "select",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  Array [
                    <option
                      disabled={true}
                      value=""
>
                      Select geographic type
</option>,
                  ],
                ],
                "disabled": false,
                "onChange": [Function],
                "value": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "-1",
                  "nodeType": "host",
                  "props": Object {
                    "children": "Select geographic type",
                    "disabled": true,
                    "value": "",
                  },
                  "ref": null,
                  "rendered": "Select geographic type",
                  "type": "option",
                },
              ],
              "type": "select",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
